[metadata]
name = translit
summary = Transliteration system for Indian languages including English 
description-file =
author = Irshad Ahmad Bhat
author-email = irshad.bhat@research.iiit.ac.in
home-page = 
classifier =

[files]
packages = 
    translit

[entry_points]
console_scripts =
    translit = translit:main

[wheel]
universal = 1

